# sizebot

./: .gitignore  LICENSE  cocksizebot.install  cocksizebot.opam  default.nix  dune-project  script.lua  shell.nix
lib/cocksizebot/: cocksizebot.ml  cocksizebot.mli  dune
lib/tg/: chatmember.ml  chatmember.mli  dispatcher.ml  dispatcher.mli  dune  message.ml  message.mli  messageentity.ml  methods.ml  methods.mli  tg.ml  types.ml  user.ml  user.mli  util.ml  util_yojson.ml
nix/b0/: default.nix
nix/odig/: default.nix
nix/redis/: default.nix  lwt.nix  sync.nix
